表单的数据绑定

--- a/angulardemo02/src/app/app.component.html
+++ b/angulardemo02/src/app/app.component.html
@@ -8,8 +8,8 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <div id="app-comp">
-  app根组件
-  <app-news></app-news>
+  <!-- <app-news></app-news> -->
+  <app-form></app-form>
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
