--- a/angulardemo02/src/app/app.component.html
+++ b/angulardemo02/src/app/app.component.html
@@ -9,7 +9,8 @@
 
 <div id="app-comp">
   <!-- <app-news></app-news> -->
-  <app-form></app-form>
+  <!-- <app-form></app-form> -->
+  <app-search></app-search>
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
