--- a/angulardemo02/src/app/app.component.html
+++ b/angulardemo02/src/app/app.component.html
@@ -10,7 +10,8 @@
 <div id="app-comp">
   <!-- <app-news></app-news> -->
   <!-- <app-form></app-form> -->
-  <app-search></app-search>
+  <!-- <app-search></app-search> -->
+  <app-todolist></app-todolist>
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
