--- a/angulardemo04/src/app/app.component.html
+++ b/angulardemo04/src/app/app.component.html
@@ -7,7 +7,8 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<app-home></app-home>
+<!-- <app-home></app-home> -->
+<app-news></app-news>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
