--- a/angulardemo05/src/app/app.component.html
+++ b/angulardemo05/src/app/app.component.html
@@ -24,6 +24,9 @@
   <li>
     <a [routerLink]="['/news']" routerLinkActive="router-link-active" >新闻</a>
   </li>
+  <li>
+    <a [routerLink]="['/childRouter']" routerLinkActive="router-link-active" >嵌套组件</a>
+  </li>
 </ul>
 <hr>
 <router-outlet></router-outlet>
